bad/assign_literal_false_int.example_compiler_output
ERROR
[1mbad/assign_literal_false_int.lat:4:8: [1;31merror: [0;1mleft side is not assignable[m
	false = 42;
	      [1;32m^[m
[1mbad/assign_literal_false_int.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	false = 42;
	[1;32m^[m
